Mejoras de diseño Header

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
   <header class="container-header">
     <div class="group-header">
       <img src="./img/logo.jpg" alt="">
-      <div>
-        <h1>Clinica Bombicino</h1>
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
+      <div class="group-text-header">
+        <h2>Clinica Bombicino</h2>
+        <h3>Centro de Terapia Fisica orientada al deporte</h3>
       </div>
     </div>
     <nav class="navbar">
-      <div class="brand-title">Clinica JB</div>
       <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -27,9 +26,9 @@
       </a>
       <div class="navbar-links">
           <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Quienes Somos</a></li>
+              <li><a href="#">Contactanos</a></li>
           </ul>
       </div>
     </nav>
