--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
       </div>
     </div>
     <nav class="navbar">
-      <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-      </a>
+      <div class="toggle-button plate plate4" onclick="this.classList.toggle('active')">
+        <svg class="burger" version="1.1" height="100" width="100" viewBox="0 0 100 100">
+          <path class="line line1" d="M 50,35 H 30" />
+          <path class="line line2" d="M 50,35 H 70" />
+          <path class="line line3" d="M 50,50 H 30" />
+          <path class="line line4" d="M 50,50 H 70" />
+          <path class="line line5" d="M 50,65 H 30" />
+          <path class="line line6" d="M 50,65 H 70" />
+        </svg>
+        <svg class="x" version="1.1" height="100" width="100" viewBox="0 0 100 100">
+          <path class="line" d="M 34,32 L 66,68" />
+          <path class="line" d="M 66,32 L 34,68" />
+        </svg>
+      </div>
       <div class="navbar-links">
           <ul>
               <li><a href="#">Inicio</a></li>
@@ -33,9 +42,7 @@
       </div>
     </nav>
 	</header>
-
-
-	<section>
+	<section class="container-section">
 		<article></article>
 		<article></article>
 	</section>
