Armado de diseño del Footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="css/card-presentacion.css">
   <link rel="stylesheet" href="./css/responsive-servicios.css">
+  <link rel="stylesheet" href="./css/footer.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
@@ -100,17 +101,38 @@
         </div>
       </div>
     </article>
-    <div class="division-titulo">
-      <div class="fondo-division-titulo">
-        <img class="logo-3" src="./img/jb.jpg" alt="Logo">
-        <h1>Contacto</h1>
-        <img class="logo-4" src="./img/jb.jpg" alt="Logo">
-      </div>
-    </div>
-    <article></article>
 	</section>
-	<aside></aside>
-	<footer></footer>
+  <footer class="container-footer">
+      <div class="group-items-footer">
+        <div class="item-footer">
+          <div class="ico-footer"><img src="./img/location-ico.png" alt=""></div>
+          <div class="texto-direccion">
+            <p>Av. De Los Incas 5150</p>
+            <p>Ciudad Autonoma de Buenos Aires</p>
+            <p>C.P. 1427</p>
+          </div>
+        </div>
+        <div class="item-footer">
+          <div class="ico-footer"><img src="./img/phone-ico.png" alt=""></div>
+          <div class="texto-direccion"></div>
+          <p>011 1234-1234</p>
+        </div>
+        <div class="item-footer redes-sociales-footer">
+          <div class="group-redes-sociales-footer">
+            <div class="item-red-social">
+              <div class="ico-footer"><a href="http://"><img src="./img/instagram-ico.png" alt=""></a></div>
+              <p>Instagram</p>
+            </div>
+            <div class="item-red-social">
+              <div class="ico-footer"><a href="http://"><img src="./img/facebook-ico.png" alt=""></a></div>
+              <p>Facebook</p>
+            </div>
+
+        </div>
+      </div>
+  </footer>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script  src="./js/responsive-servicios.js"></script>
 </body>
