--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
         </div>
       </div>
     </article>
+    <article></article>
 	</section>
-  <footer class="container-footer">
+  <footer class="container-footer"> 
       <div class="group-items-footer">
         <div class="item-footer">
-          <div class="ico-footer"><img src="./img/location-ico.png" alt=""></div>
+          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
           <div class="texto-direccion">
             <p>Av. De Los Incas 5150</p>
             <p>Ciudad Autonoma de Buenos Aires</p>
@@ -113,18 +114,18 @@
           </div>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><img src="./img/phone-ico.png" alt=""></div>
+          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>
           <div class="texto-direccion"></div>
           <p>011 1234-1234</p>
         </div>
         <div class="item-footer redes-sociales-footer">
           <div class="group-redes-sociales-footer">
             <div class="item-red-social">
-              <div class="ico-footer"><a href="http://"><img src="./img/instagram-ico.png" alt=""></a></div>
+              <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
               <p>Instagram</p>
             </div>
             <div class="item-red-social">
-              <div class="ico-footer"><a href="http://"><img src="./img/facebook-ico.png" alt=""></a></div>
+              <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
               <p>Facebook</p>
             </div>
 
