--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/card-presentacion.css">
   <link rel="stylesheet" href="./css/responsive-servicios.css">
   <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="./css/cards-services.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
@@ -101,7 +102,40 @@
         </div>
       </div>
     </article>
-    <article></article>
+    <article class="container-cards-servicios">
+
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-kinesiologia.png" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Kinesiología</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
+      
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-nutricion.png" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Nutrición</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
+
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-consultasmedicas.png" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Consultas Medicas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
+
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Entrenamiento Personalizado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
+    </article>
 	</section>
   <footer class="container-footer"> 
       <div class="group-items-footer">
