Agregar seccion Quienes Somos...

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/cards-services.css">
   <link rel="stylesheet" href="./css/carrousel.css">
+  <link rel="stylesheet" href="./css/quienessomos.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
