--- a/quienessomos.html
+++ b/quienessomos.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/cards-services.css">
   <link rel="stylesheet" href="./css/carrousel.css">
+  <link rel="stylesheet" href="./css/quienessomos.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
@@ -58,7 +59,15 @@
       </ul>
     </article>
 	</section>
-
+  <section class="container-quienes-somos">
+    <h2>Quienes Somos...</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eaque a ex est commodi aspernatur culpa aliquid consectetur tempora suscipit quis earum repudiandae asperiores, tenetur, labore dolorum. Exercitationem, praesentium totam.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem iste incidunt in unde quisquam ipsa autem amet impedit fuga adipisci, nulla hic necessitatibus excepturi, pariatur minima. Eaque magnam incidunt tenetur?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab placeat inventore eius alias quae reprehenderit nihil, veniam aperiam delectus iure aut nesciunt exercitationem laboriosam. Tempore asperiores aliquid architecto impedit corporis!
+      lorem
+    </p>
+  </section>
   <footer class="container-footer"> 
       <div class="group-items-footer">
         <div class="item-footer">
