Armar diseño del modulo contacto

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
       <div class="navbar-links">
           <ul>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Quienes Somos</a></li>
-              <li><a href="#">Contactanos</a></li>
+              <li><a href="./index.html">Inicio</a></li>
+              <li><a href="./quienessomos.html">Quienes Somos</a></li>
+              <li><a href="./contacto.html">Contacto</a></li>
           </ul>
       </div>
     </nav>
@@ -65,7 +65,7 @@
           <p>
             Nuestra clinica se especializa a tratar a pacientes deportistas bla bla bla
           </p>
-          <button>Conocenos mas haciendo click Aqui</button>
+          <button><a href="./quienessomos.html">Conocenos mas haciendo click Aqui</a></button>
         </div>
       </div>
     </article>
@@ -146,7 +146,7 @@
           <div class="texto-direccion">
             <p>Av. De Los Incas 5150</p>
             <p>Ciudad Autonoma de Buenos Aires</p>
-            <p>C.P. 1427</p>
+            <p>C1427</p>
           </div>
         </div>
         <div class="item-footer">
