--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/cards-services.css">
   <link rel="stylesheet" href="./css/carrousel.css">
   <link rel="stylesheet" href="./css/quienessomos.css">
+  <link rel="stylesheet" href="./css/contacto.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
@@ -48,57 +49,54 @@
       </div>
     </nav>
 	</header>
-	<section class="container-section">
-    <article class="container-carrousel">
-      <ul class="slider">
-        <li class="slide s1"></li>
-        <li class="slide s2"></li>
-        <li class="slide s3"></li>
-        <li class="slide s4"></li>
-        <li class="slide s5"></li>
-      </ul>
-    </article>
-	</section>
-  <section class="container-quienes-somos">
-    <h2>Quienes Somos...</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eaque a ex est commodi aspernatur culpa aliquid consectetur tempora suscipit quis earum repudiandae asperiores, tenetur, labore dolorum. Exercitationem, praesentium totam.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem iste incidunt in unde quisquam ipsa autem amet impedit fuga adipisci, nulla hic necessitatibus excepturi, pariatur minima. Eaque magnam incidunt tenetur?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab placeat inventore eius alias quae reprehenderit nihil, veniam aperiam delectus iure aut nesciunt exercitationem laboriosam. Tempore asperiores aliquid architecto impedit corporis!
-      lorem
-    </p>
-  </section>
-  <footer class="container-footer"> 
-      <div class="group-items-footer">
-        <div class="item-footer">
+	<section class="container-contact">
+		<div class="content">
+			<h2>Contacto</h2>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem numquam id reprehenderit, sunt laudantium enim possimus repellat debitis et quis!</p>
+		</div>
+		<div class="container">
+			<div class="contactInfo">
+				<div class="box">
           <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
-          <div class="texto-direccion">
-            <p>Av. De Los Incas 5150</p>
-            <p>Ciudad Autonoma de Buenos Aires</p>
-            <p>C1427</p>
-          </div>
-        </div>
-        <div class="item-footer">
+					<div class="text">
+						<h3>Domicilio</h3>
+						<p>Av. De Los Incas 5150<br>Ciudad Autonoma de Buenos Aires<br>C1427</p>
+					</div>
+				</div>
+				<div class="box">
           <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>
-          <div class="texto-direccion"></div>
-          <p>011 1234-1234</p>
-        </div>
-        <div class="item-footer redes-sociales-footer">
-          <div class="group-redes-sociales-footer">
-            <div class="item-red-social">
-              <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
-              <p>Instagram</p>
-            </div>
-            <div class="item-red-social">
-              <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
-              <p>Facebook</p>
+					<div class="text">
+						<h3>Telefono</h3>
+						<p>000-000-0000</p>
+					</div>
+				</div>
+				<div class="box">
+          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+					<div class="text">
+						<h3>Email</h3>
+						<p>wrub7d78i0e@temporary-mail</p>
+					</div>
+				</div>
+        <div class="box">
+          <div class="group-redes-sociales">
+            <h3>Redes Sociales</h3>
+            <div class="item-footer redes-sociales-footer">
+                <div class="item-red-social">
+                  <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
+                  <p>Instagram</p>
+                </div>
+                <div class="item-red-social">
+                  <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
+                  <p>Facebook</p>
+                </div>
             </div>
           </div>
-        </div>
-  </footer>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+			</div>
+		</div>
+	</section>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script  src="./js/responsive-servicios.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
