Mejoras de responsive en el footer

--- a/index.html
+++ b/index.html
@@ -150,9 +150,16 @@
           </div>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>
-          <div class="texto-direccion"></div>
-          <p>011 1234-1234</p>
+          <div class="group-tel-email">
+            <div class="item-tel-email">
+              <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+              <p>011 1234-1234</p>
+            </div>
+            <div class="item-tel-email">
+              <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+              <p>sarasa@gmail.com</p>
+            </div>
+          </div>
         </div>
         <div class="item-footer redes-sociales-footer">
           <div class="group-redes-sociales-footer">
