Modificar fuente de letra en toda la pagina web

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Kanit:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="css/card-presentacion.css">
@@ -20,7 +24,7 @@
     <div class="group-header">
       <img src="./img/logo.jpg" alt="">
       <div class="group-text-header">
-        <h2>Clinica Bombicino</h2>
+        <h2>Clinica Jorge Bombicino</h2>
         <h3>Centro de Terapia Fisica orientada al deporte</h3>
       </div>
     </div>
@@ -41,9 +45,9 @@
       </div>
       <div class="navbar-links">
           <ul>
-              <li><a href="./index.html">Inicio</a></li>
-              <li><a href="./quienessomos.html">Quienes Somos</a></li>
-              <li><a href="./contacto.html">Contacto</a></li>
+            <li class="btn-inicio"><a href="./index.html">Inicio</a></li>
+            <li class="btn-quienes-somos"><a href="./quienessomos.html">Quienes Somos</a></li>
+            <li class="btn-contacto"><a href="./contacto.html">Contacto</a></li>
           </ul>
       </div>
     </nav>
@@ -65,7 +69,7 @@
           <p>
             Nuestra clinica se especializa a tratar a pacientes deportistas bla bla bla
           </p>
-          <button><a href="./quienessomos.html">Conocenos mas haciendo click Aqui</a></button>
+          <a class="boton-conocenos-mas" href="./quienessomos.html"><button>Conocenos mas...</button></a>
         </div>
       </div>
     </article>
