--- a/quienessomos.html
+++ b/quienessomos.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Kanit:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="css/card-presentacion.css">
@@ -41,9 +45,9 @@
       </div>
       <div class="navbar-links">
           <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./quienessomos.html">Quienes Somos</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
+            <li class="btn-inicio"><a href="./index.html">Inicio</a></li>
+            <li class="btn-quienes-somos"><a href="./quienessomos.html">Quienes Somos</a></li>
+            <li class="btn-contacto"><a href="./contacto.html">Contacto</a></li>
           </ul>
       </div>
     </nav>
