--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1>Servicios</h1>
         <img class="logo-4" src="./img/jb.jpg" alt="Logo">
       </div>
-    </div>
+    </div> 
     <article class="container-galeria-servicios">
       <div class="grid">
         <div class="item">
@@ -109,7 +109,6 @@
       </div>
     </article>
     <article class="container-cards-servicios">
-
         <div class="card-service">
           <div class="card-img-shadow"><img src="./img/servicios-kinesiologia.png" alt="wanda"></div>
           <div class="card-content">
@@ -182,6 +181,7 @@
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
-  <script  src="./js/responsive-servicios.js"></script>
+  <script src="./js/responsive-servicios.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
 </body>
 </html>
