Mejoras de rendimiento cuando cambias de modulo

--- a/contacto.html
+++ b/contacto.html
@@ -53,50 +53,52 @@
       </div>
     </nav>
 	</header>
-	<section class="container-contact">
-		<div class="content">
-			<h2>Contacto</h2>
-			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem numquam id reprehenderit, sunt laudantium enim possimus repellat debitis et quis!</p>
-		</div>
-		<div class="container">
-			<div class="contactInfo">
-				<div class="box">
-          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
-					<div class="text">
-						<h3>Domicilio</h3>
-						<p>Av. De Los Incas 5150<br>Ciudad Autonoma de Buenos Aires<br>C1427</p>
-					</div>
-				</div>
-				<div class="box">
-          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>
-					<div class="text">
-						<h3>Telefono</h3>
-						<p>000-000-0000</p>
-					</div>
-				</div>
-				<div class="box">
-          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
-					<div class="text">
-						<h3>Email</h3>
-						<p>wrub7d78i0e@temporary-mail</p>
-					</div>
-				</div>
-        <div class="box">
-          <div class="group-redes-sociales">
-            <h3>Redes Sociales</h3>
-            <div class="item-footer redes-sociales-footer">
-                <div class="item-red-social">
-                  <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
-                  <p>Instagram</p>
-                </div>
-                <div class="item-red-social">
-                  <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
-                  <p>Facebook</p>
-                </div>
+	<section class="container-section">
+    <article class="container-contact">
+      <div class="content">
+        <h2>Contacto</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem numquam id reprehenderit, sunt laudantium enim possimus repellat debitis et quis!</p>
+      </div>
+      <div class="container">
+        <div class="contactInfo">
+          <div class="box">
+            <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+            <div class="text">
+              <h3>Domicilio</h3>
+              <p>Av. De Los Incas 5150<br>Ciudad Autonoma de Buenos Aires<br>C1427</p>
             </div>
           </div>
-			</div>
-		</div>
+          <div class="box">
+            <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>
+            <div class="text">
+              <h3>Telefono</h3>
+              <p>000-000-0000</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+            <div class="text">
+              <h3>Email</h3>
+              <p>wrub7d78i0e@temporary-mail</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="group-redes-sociales">
+              <h3>Redes Sociales</h3>
+              <div class="item-footer redes-sociales-footer">
+                  <div class="item-red-social">
+                    <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
+                    <p>Instagram</p>
+                  </div>
+                  <div class="item-red-social">
+                    <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
+                    <p>Facebook</p>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </article>
 	</section>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script  src="./js/responsive-servicios.js"></script>
