--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./css/cards-services.css">
   <link rel="stylesheet" href="./css/carrousel.css">
   <link rel="stylesheet" href="./css/quienessomos.css">
+  <link rel="stylesheet" href="./css/contacto.css">
   <script src="./js/navbar.js" defer></script>
 	<title>Clinica Bombicino</title>
 </head>
@@ -45,9 +46,9 @@
       </div>
       <div class="navbar-links">
           <ul>
-            <li class="btn-inicio"><a href="./index.html">Inicio</a></li>
-            <li class="btn-quienes-somos"><a href="./quienessomos.html">Quienes Somos</a></li>
-            <li class="btn-contacto"><a href="./contacto.html">Contacto</a></li>
+            <li class="btn-inicio"><a href="#">Inicio</a></li>
+            <li class="btn-quienes-somos"><a href="#">Quienes Somos</a></li>
+            <li class="btn-contacto"><a href="#">Contacto</a></li>
           </ul>
       </div>
     </nav>
@@ -69,7 +70,7 @@
           <p>
             Nuestra clinica se especializa a tratar a pacientes deportistas bla bla bla
           </p>
-          <a class="boton-conocenos-mas" href="./quienessomos.html"><button>Conocenos mas...</button></a>
+          <button class="boton-conocenos-mas">Conocenos mas...</button>
         </div>
       </div>
     </article>
@@ -178,10 +179,12 @@
         </div>
       </div>
   </footer>
+
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script src="./js/responsive-servicios.js"></script>
-  <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
+  
 </body>
 </html>
