Agregar boton flotante whatsapp

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Kanit:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	<link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="css/card-presentacion.css">
@@ -21,6 +22,9 @@
 	<title>Clinica Bombicino</title>
 </head>
 <body>
+  <a href="https://api.whatsapp.com/send?phone=+54 1123233335&text=Hola,%20quiero%20solicitar%20un%20turno" target="_blank" class="float-wp">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
   <header class="container-header">
     <div class="group-header">
       <img src="./img/logo.jpg" alt="">
