Modificar Header y agregar videos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Kanit:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	<link rel="stylesheet" href="./css/navbar.css">
@@ -27,7 +27,7 @@
   </a>
   <header class="container-header">
     <div class="group-header">
-      <img src="./img/logo.jpg" alt="">
+      <img src="./img/jb.jpg" alt=""> 
       <div class="group-text-header">
         <h2>Clinica Jorge Bombicino</h2>
         <h3>Centro de Terapia Fisica orientada al deporte</h3>
@@ -58,13 +58,6 @@
     </nav>
 	</header>
 	<section class="container-section">
-    <div class="division-titulo quienes-somos">
-      <div class="fondo-division-titulo">
-        <img class="logo-1" src="./img/jb.jpg" alt="Logo">
-        <h1>Bienvenido</h1>
-        <img class="logo-2" src="./img/jb.jpg" alt="Logo">
-      </div>
-    </div>
     <article class="container-card-presentacion">
       <div class="card">
         <img src="./img/card-presentacion.jpg" />
@@ -78,37 +71,31 @@
         </div>
       </div>
     </article>
-    <div class="division-titulo">
-      <div class="fondo-division-titulo">
-        <img class="logo-3" src="./img/jb.jpg" alt="Logo">
-        <h1>Servicios</h1>
-        <img class="logo-4" src="./img/jb.jpg" alt="Logo">
-      </div>
-    </div> 
     <article class="container-galeria-servicios">
       <div class="grid">
-        <div class="item">
-          <p>Kinesiologia</p>
+        <div class="item" id="video-1">
+          <p>Pilar</p>
           <div class="img-wrapper">
-            <img class="img-servicios" src="./img/servicios-kinesiologia.png" alt='Kinesiologia'>
+            <video class="vid-servicios video-1" src="./videos/video-1.mp4"></video>
           </div>
         </div>
-        <div class="item">
-          <p>Nutricion</p>
+        <div class="item" id="video-2">
+          <p>Capital Federal</p>
           <div class="img-wrapper">
-            <img class="img-servicios" src='./img/servicios-nutricion.png' alt='Nutricion'>
+            <video class="vid-servicios video-2" src="./videos/video-1.mp4"></video>
           </div>
         </div>
-        <div class="item">
+        <div class="item" id="video-3">
           <p>Consultas Medicas</p>
           <div class="img-wrapper">
-            <img class="img-servicios" src='./img/servicios-consultasmedicas.png' alt='Consultas Medicas'>
+            <video class="vid-servicios video-3" src="./videos/video-1.mp4"></video>
           </div>
         </div>
-        <div class="item">
+        <div class="item" id="video-4">
           <p>Entrenamiento Personalizado</p>
           <div class="img-wrapper">
-            <img class="img-servicios" src='./img/servicios-entrenamientoPersonalizado.JPG' alt="Entrenamiento Personalizado">
+            <video class="vid-servicios video-4" src="./videos/video-1.mp4"></video>
+            <!-- <img class="img-servicios" src='./img/servicios-entrenamientoPersonalizado.JPG' alt="Entrenamiento Personalizado"> -->
           </div>
         </div>
       </div>
@@ -188,7 +175,7 @@
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script src="./js/responsive-servicios.js"></script>
-    <script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
   
 </body>
 </html>
