Agregar 2 cards y calibrar diseño de cards

--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
           </div>
         </div>
+
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Entrenamiento Personalizado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
+
+        <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Entrenamiento Personalizado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+          </div>
+        </div>
     </article>
 	</section>
   <footer class="container-footer"> 
