--- a/index.html
+++ b/index.html
@@ -151,41 +151,77 @@
     </article>
 	</section>
   <footer class="container-footer"> 
-      <div class="group-items-footer">
+    <div class="group-sucursales-footer">
+      <div class="sucursal-footer">
+        <h3>Villa Urquiza - C.A.B.A.</h3>
         <div class="item-footer">
           <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
           <div class="texto-direccion">
-            <p>Av. De Los Incas 5150</p>
-            <p>Ciudad Autonoma de Buenos Aires</p>
-            <p>C1427</p>
+            <p>Av. De Los Incas 5150 - C1427</p>
           </div>
         </div>
         <div class="item-footer">
-          <div class="group-tel-email">
-            <div class="item-tel-email">
-              <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
-              <p>011 1234-1234</p>
-            </div>
-            <div class="item-tel-email">
-              <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
-              <p>sarasa@gmail.com</p>
-            </div>
-          </div>
+          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+          <p>011 1234-1234</p>
         </div>
-        <div class="item-footer redes-sociales-footer">
-          <div class="group-redes-sociales-footer">
-            <div class="item-red-social">
-              <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
-              <p>Instagram</p>
-            </div>
-            <div class="item-red-social">
-              <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
-              <p>Facebook</p>
-            </div>
-
+        <div class="item-footer">
+          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+          <p>scaba@gmail.com</p>
         </div>
       </div>
+
+      <div class="sucursal-footer">
+        <h3>Pilar - Buenos Aires</h3>
+        <div class="item-footer">
+          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+          <div class="texto-direccion">
+            <p>Av. Moreno 560 - C1520</p>
+          </div>
+        </div>
+        <div class="item-footer">
+          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+          <p>011 4444-5555</p>
+        </div>
+        <div class="item-footer">
+          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+          <p>pilar@gmail.com</p>
+        </div>
+      </div>
+    </div> 
   </footer>
+
+  <!-- <div class="group-items-footer">
+    <div class="item-footer">
+      <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+      <div class="texto-direccion">
+        <p>Av. De Los Incas 5150</p>
+        <p>Ciudad Autonoma de Buenos Aires</p>
+        <p>C1427</p>
+      </div>
+    </div>
+    <div class="item-footer">
+      <div class="group-tel-email">
+        <div class="item-tel-email">
+          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+          <p>011 1234-1234</p>
+        </div>
+        <div class="item-tel-email">
+          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+          <p>sarasa@gmail.com</p>
+        </div>
+      </div>
+    </div>
+    <div class="item-footer redes-sociales-footer">
+      <div class="group-redes-sociales-footer">
+        <div class="item-red-social">
+          <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
+          <p>Instagram</p>
+        </div>
+        <div class="item-red-social">
+          <div class="ico-footer"><a href="https://www.facebook.com/clinicajorgebombicino" target="_blank"><img src="./img/facebook-ico.png" alt="Facebook"></a></div>
+          <p>Facebook</p>
+        </div>
+    </div> -->
 
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
