Reproducir videos de youtube

--- a/index.html
+++ b/index.html
@@ -79,26 +79,26 @@
       <div class="grid">
         <div class="item" id="video-1">
           <p>Pilar</p>
-          <div class="img-wrapper">
-            <video class="vid-servicios video-1" src="./videos/video-1.mp4"></video>
+          <div class="img-wrapper video-1">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dSHgRZGIznU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
         <div class="item" id="video-2">
           <p>Capital Federal</p>
-          <div class="img-wrapper">
-            <video class="vid-servicios video-2" src="./videos/video-2.mp4"></video>
+          <div class="img-wrapper video-2">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9sqbAadwIm0?si=7jrZMpeBi92Qs_x3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
         <div class="item" id="video-3">
           <p>Consultas Medicas</p>
-          <div class="img-wrapper">
-            <video class="vid-servicios video-3" src="./videos/video-3.mp4"></video>
+          <div class="img-wrapper video-3">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vc41jG_84cQ?si=aVnyDPTKREYL2sxs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
         <div class="item" id="video-4">
           <p>Entrenamiento Personalizado</p>
-          <div class="img-wrapper">
-            <video class="vid-servicios video-4" src="./videos/video-4.mp4"></video>
+          <div class="img-wrapper video-4">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kymMZhvyTXo?si=7iTgNzNP78wJMmSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <!-- <img class="img-servicios" src='./img/servicios-entrenamientoPersonalizado.JPG' alt="Entrenamiento Personalizado"> -->
           </div>
         </div>
@@ -154,6 +154,7 @@
         </div>
     </article>
 	</section>
+
   <footer class="container-footer"> 
     <div class="group-sucursales-footer">
       <div class="sucursal-footer">
