Ajustar imagenes del carrousel y otras mejoras

--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
         </div>
     </article>
 	</section>
-
   <footer class="container-footer"> 
     <div class="group-sucursales-footer">
       <div class="sucursal-footer">
@@ -194,6 +193,9 @@
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script src="./js/responsive-servicios.js"></script>
   <script src="./js/script.js"></script>
-  
+  <!--
+    Pagina Web Diseñada y construida por Mariano Sy
+    Mail: mariano.floresta@hotmail.com
+   -->
 </body>
 </html>
