--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </div>
   </div>
   <header class="container-header">
-    <div class="group-header">
-      <img src="./img/jb.jpg" alt=""> 
-      <div class="group-text-header">
-        <h2>Clinica Jorge Bombicino</h2>
-        <h3>Centro de Terapia Fisica orientada al deporte</h3>
+      <div class="grid-header">
+        <img src="./img/jb.jpg" alt="Logo"> 
+        <div class="group-text-header">
+          <h2>Clinica Jorge Bombicino</h2>
+          <h3>Centro de Terapia Fisica orientada al deporte</h3>
+        </div>
       </div>
-    </div>
     <nav class="navbar">
       <div class="toggle-button plate plate4" onclick="this.classList.toggle('active')">
         <svg class="burger" version="1.1" height="100" width="100" viewBox="0 0 100 100">
