Modificaicones diseño y videos cambio de  fuente

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	<link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/index.css">
@@ -33,8 +32,7 @@
       <div class="grid-header">
         <img src="./img/jb.jpg" alt="Logo"> 
         <div class="group-text-header">
-          <h2>Clinica Jorge Bombicino</h2>
-          <h3>Centro de Terapia Fisica orientada al deporte</h3>
+          <h2>Centro de terapia física Jorge Bombicino</h2>
         </div>
       </div>
     <nav class="navbar">
@@ -88,12 +86,12 @@
           </div>
         </div>
         <div class="item" id="video-3">
-          <p>Consultas Medicas</p>
+          <p>Entrenamiento grupal</p>
           <div class="img-wrapper video-3">
           </div>
         </div>
         <div class="item" id="video-4">
-          <p>Entrenamiento Personalizado</p>
+          <p>Trabajo en equipo</p>
           <div class="img-wrapper video-4">
           </div>
         </div>
