--- a/contacto.html
+++ b/contacto.html
@@ -55,51 +55,52 @@
 	</header>
 	<section class="container-section">
     <article class="container-contact">
-      <div class="content">
-        <h2>Contacto</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem numquam id reprehenderit, sunt laudantium enim possimus repellat debitis et quis!</p>
-        <div class="item-instagram">
-          <h3>Podes encontrarnos en:</h3>
-          <div>
-            <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
-            <p>Instagram</p>
-          </div>
-        </div>
-      </div>
+
       <div class="container-sucursales-contacto">
         <div class="columna-sucursal">
           <h3>Villa Urquiza - C.A.B.A.</h3>
+          <img class="img-suc-incas" src="./img/sede-incas.jpg" alt="">
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+            <div class="ico-contacto"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
             <div class="texto-direccion-contacto">
               <p>Av. De Los Incas 5150 - C1427</p>
             </div>
           </div>
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+            <div class="ico-contacto"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
             <p>011 1234-1234</p>
           </div>
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+            <div class="ico-contacto"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
             <p>scaba@gmail.com</p>
           </div>
         </div>
-
+  
         <div class="columna-sucursal">
           <h3>Pilar - Buenos Aires</h3>
+          <img class="img-suc-pilar" src="./img/sede-pilar.jpg" alt="">
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+            <div class="ico-contacto"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
             <div class="texto-direccion-contacto">
               <p>Av. Moreno 560 - C1520</p>
             </div>
           </div>
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+            <div class="ico-contacto"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
             <p>011 4444-5555</p>
           </div>
           <div class="item-sucursal-contacto">
-            <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
+            <div class="ico-contacto"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
             <p>pilar@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="content">
+        <div class="item-instagram">
+          <h3>Podes encontrarnos en:</h3>
+          <div>
+            <div class="ico-footer"><a href="https://www.instagram.com/terapia_fisica_bombicino/"  target="_blank"><img src="./img/instagram-ico.png" alt="Instagram"></a></div>
+            <p>Instagram</p>
           </div>
         </div>
       </div>
