Mejoras de reproduccion automatica de videos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper-slide--one">
-            <video controls>
+            <video id="video-1">
               <source src="./videos/video-1.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--two">
-            <video controls>
+            <video id="video-2">
               <source src="./videos/video-2.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--three">
-            <video controls>
+            <video id="video-3">
               <source src="./videos/video-3.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--four">
-            <video controls>
+            <video id="video-4">
               <source src="./videos/video-4.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
