--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <article class="container-video-servicios">
       <div class="swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide swiper-slide--one">
+          <div class="swiper-slide swiper-slide--one" id="slide-1">
             <video id="video-1">
               <source src="./videos/video-1.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -86,7 +86,7 @@
               <h2>Sucursal Pilar</h2>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide--two">
+          <div class="swiper-slide swiper-slide--two" id="slide-2">
             <video id="video-2">
               <source src="./videos/video-2.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -95,7 +95,7 @@
               <h2>Sucursal C.A.B.A.</h2>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide--three">
+          <div class="swiper-slide swiper-slide--three" id="slide-3">
             <video id="video-3">
               <source src="./videos/video-3.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -104,7 +104,7 @@
               <h2>Entrenamiento Grupal</h2>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide--four">
+          <div class="swiper-slide swiper-slide--four" id="slide-4">
             <video id="video-4">
               <source src="./videos/video-4.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -210,7 +210,6 @@
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
-  <script src="./js/presentacion-videos.js"></script>
   <script src="./js/script.js"></script>
   <!--
     Pagina Web Diseñada y construida por Mariano Sy
